# python_uv_template

./: .gitignore  LICENSE  README.md  pyproject.toml
.github/: ci.yaml  lint.yaml
.github/workflows/: ci.yaml
python_uv_template/: hello.py
tests/: test_hello.py
